# celery-man

./: Dockerfile  README.md  celery-man.cabal
js/: streamingUpload.js
migrations/: Dockerfile  README.md  newTemplate.sh  runMigration.sh
migrations/scripts/: 1590313238_createSchema.sql  1590313270_createEmployeesTable.sql
resources/: good_sample.csv
src/: Main.hs
src/API/: Endpoints.hs  Handlers.hs  Server.hs
src/Beta/: StreamingUpload.hs
src/Core/: Service.hs  StreamingUpload.hs  Types.hs
src/Database/: Postgres.hs
src/Interface/: Index.hs  UI.hs
src/Interface/Dashboard/: Handler.hs  Render.hs
src/Interface/Layout/: Handler.hs  Render.hs
src/Interface/Upload/: Handler.hs  Render.hs
static/: upload.js
static/largeupload/: index.html
test/Core/: ServiceSpec.hs
test/Database/: PostgresSpec.hs
