cabal-version:       3.0

name:                celery-man
version:             0.1.0.0
build-type:          Simple

executable celery-man
  main-is:             Main.hs
  other-modules:       Core.Types
                     , Core.Service
                     , API.Server
                     , API.Handlers
                     , API.Endpoints
                     , Database.Postgres
                     , Interface.UI
                     , Interface.Index
                     , Interface.Dashboard.Handler
                     , Interface.Dashboard.Render
                     , Interface.Layout.Handler
                     , Interface.Layout.Render
                     , Interface.Upload.Handler
                     , Interface.Upload.Render
  build-depends:       base
                     , text
                     , servant-server
                     , servant-multipart
                     , aeson
                     , warp
                     , cassava
                     , bytestring
                     , vector
                     , containers
                     , postgresql-simple
                     , scientific
                     , safe-exceptions
                     , concur-replica
                     , concur-core
                     , replica
                     , websockets
                     , file-embed
                     , wai
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall
